# auto-psych

./: .firebaserc  .firebaserc.example  .gcloudignore  .gitignore  .secrets.example  CLEANUP_PLAN.md  CLOUDRUN_README.md  Dockerfile  HERO_RUN_DESIDERATA.md  PROBLEMS.md  README.md  SUMMARY.md  candidate.py  extract_pdf.py  firebase.json  firebase.viewer.json  firestore.rules  generate_candidates.py  opencode.json  outer_live_30466017.out  pyproject.toml  requirements-dev.txt  requirements-remote.txt  requirements.txt  run_agent.py  run_critic.py  run_pipeline.py  test_eval.py  test_hierarchical.py  test_responses.py  test_shape.py
.claude/prove_it/: config.json
analysis/behavioral/: 00_load_human_data.qmd  01_response_analysis.qmd  02_best_fitting_theories.qmd  README.md  fit_mega_models.py  mega_models.json
cc_pipeline/: ndgnotes.md  orchestrator.py  run_pipeline_cc.py
cc_pipeline/prompts/: 1_theory.md  2_design.md  3_implement.md  4_collect.md  5_analyze.md  5_critique.md  6_interpret.md
cloudrun/: README.md  job.yaml
docs/: deployment_handoff.md
functions/: index.js  package-lock.json  package.json
legacy/: .secrets.example  firebase.json  requirements.txt  run_critic.py  run_pipeline.py
legacy/cloudrun/: README.md
legacy/prompts/: 4_collect_participant.md
legacy/remote_jobs/: experiments.md  pipeline.slurm  setup_remote.sh  smoke_e2e.sh  smoke_infra.sh  smoke_infra.slurm  submit.py
legacy/scripts/: cloud_run_entrypoint.py
legacy/src/: firestore_sync.py  graph.py
legacy/tests/: test_correlations.py  test_designer_output.py  test_eig.py  test_nobrowser_mode.py
projects/subjective_randomness/: ground_truth_models.py  preprocess_data.py  problem_definition.md  prolific_config.yaml  prolific_config.yaml.example
projects/think_aloud_game24/: project_config.yaml
prompts/: 1_theory.md  1theorist.md  2experiment_designer.md  3_implement.md  3experiment_implementer.md  4_collect_steering.md  4deployer.md  5_analyze.md  5simulated_participant.md  5simulated_participant_steering.md  6_interpret.md  6data_analyst.md  7interpreter.md
remote_jobs/: .env.example  README.md  experiments.md  pipeline.slurm  remote_exec.sh  setup_remote.sh  smoke_infra.slurm  submit.py  sync_from_remote.sh
scratch/: test_cauchy.py  test_hier.py
script/: test
scripts/: make_loop_diagram.py  sanitize_prompt_listings.py  smoke_firebase_deploy.py  smoke_open_participant.py  test  test_fast
scripts/analysis/: compare_human_run_models.py  compute_completion_time.py  plot_holdout_combined.py  plot_human_fit_comparison.py  plot_impossible_combined.py  summarize_run_model_rmse.py
scripts/outer_loop_live/: README.md  _env.sh  _pilot_config.py  collect_results.sh  (+9 more)
src/: __init__.py  batch_plots.py  config.py  console_log.py  graph.py  jatos.py  jatos_build.py  jatos_config.py  observability.py  problem_definition.py  prolific_client.py  prompts.py  references.py  state.py  state_loader.py
templates/: README.md  consent.txt  jspsych_experiment.html  jspsych_experiment_preview.html
tests/: conftest.py  monitor_fixtures.py  test_admit_candidate.py  test_candidate_agent_spawn.py  test_candidate_context_features.py  test_candidate_hints.py  test_candidate_naming.py  test_candidate_prompt_injection.py  test_carry_forward_models.py  test_cc_inner_loop_integration.py  test_cc_model_families.py  test_cli_parsing.py  test_coding_agent.py  test_collect_pymc.py  test_collect_qc.py  test_compare_human_run_models.py  test_compute_completion_time.py  test_critique_persistence.py  test_critique_ppc.py  test_deployment_auth.py  test_deployment_dry_run.py  test_deployment_firebase.py  test_deployment_firestore.py  test_deployment_manifest.py  test_deployment_per_run_site.py  test_deployment_prolific.py  test_deployment_smoke.py  test_deployment_smoke_template.py  test_design_context_models.py  test_designer_output.py  test_discriminating_probe.py  test_eig.py  test_eig_pymc.py  test_export_inner_loop_model.py  test_featurizer_parity.py  test_hero_knob_threading.py  test_holdout_repair.py  test_human_fit_comparison.py  test_human_results_collection.py  test_impossible_combined.py  (+64 more)
(+2985 files in other folders)
