[project]
name = "auto-psych"
version = "0.1.0"
description = "Agentic cognitive psychology experiment and model-discovery pipelines"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-firestore>=2.13.0",
    "google-cloud-storage>=2.14.0",
    "google-generativeai>=0.8.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "numpy>=1.26.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0.0",
    "scipy>=1.11.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.5.0",
    "pytest>=7.0.0",
]
remote = [
    "google-generativeai>=0.8.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0.0",
]
pymc = [
    "arviz>=0.17.0",
    "pymc>=5.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src/pipelines/inner_loop/tests"]
pythonpath = ["."]
