[project]
name = "auto-psych"
version = "0.1.0"
description = "Agentic cognitive psychology experiment and model-discovery pipelines"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "google-cloud-firestore>=2.13.0",
    "google-cloud-storage>=2.14.0",
    "google-generativeai>=0.8.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "numpy>=1.26.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "pyprojroot>=0.3.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "tyro>=0.8.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.5.0",
    "pandas>=2.0.0",
    "plotnine>=0.13.0",
    "pytest>=7.0.0",
]
remote = [
    "google-generativeai>=0.8.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0.0",
]
pymc = [
    "arviz>=0.17.0",
    "pymc>=5.10.0",
]
# Open-weight participant models (LLM-as-participant, --participant-backend open).
# Heavy; install only when needed: `uv sync --group open-models`.
# CPU/Apple-MPS torch resolves by default. For an NVIDIA GPU, install the torch
# wheel matching your CUDA version (https://pytorch.org/get-started/locally/)
# before syncing this group.
open-models = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
]

[tool.uv]
# The test suite (and the inner-loop pipeline) depend on the pymc stack, so it
# must be present in the default dev environment — otherwise a plain `uv sync`
# prunes pymc/pytensor and every PyMC test fails. `open-models` stays opt-in
# (heavy torch/transformers; no test needs it): `uv sync --group open-models`.
default-groups = ["dev", "pymc"]

# Sherlock (and other RHEL7) compute nodes run glibc 2.17 (manylinux2014). The
# newest numpy/scipy/pandas dropped their glibc-2.17 wheels — they now require
# glibc >= 2.27/2.28 — so without these caps `uv` finds no compatible wheel on the
# cluster and falls back to building them from source (slow; needs gfortran/BLAS).
# Cap them to the last releases that still ship manylinux2014 (glibc 2.17) wheels.
# Remove these caps if you only run on glibc >= 2.28 hosts. After editing, re-lock:
#   uv lock && uv run pytest -q
constraint-dependencies = ["numpy<2.3", "scipy<1.15", "pandas<2.3"]

# NOTE on the Python version (see .python-version, pinned to 3.11): the code is
# written for the arviz 0.x / pymc 5.x API (e.g. `loo.elpd_loo`,
# `az.compare(ic="loo")`, positive `elpd_diff`). On Python >= 3.12 this lock
# resolves arviz 1.x / pymc 6.x, whose DataTree rewrite renames/changes those
# (e.g. `loo.elpd`, no `ic=` kwarg, sign-flipped `elpd_diff`) and breaks the
# model-comparison code and tests. Staying on 3.11 keeps the validated 0.x stack.
# Porting to arviz 1.x (then any Python >= 3.12 works) is a separate task.

[tool.pytest.ini_options]
testpaths = ["tests", "src/pipelines/inner_loop/tests"]
pythonpath = ["."]
markers = [
    "slow: tests that run MCMC (PyMC NUTS) — deselect with '-m \"not slow\"'",
]
